# xeroj

./: .gitignore  README.md  dexscreener.py  get_symbol.py  helper_func.py  jupiter_client.py  linkx.py  main.py  mention_linker.py  mention_sniper.py  ninmal_qoute_test.py  pyproject.toml  requirements.txt  sell.py  sniping.py  wallets.py  x_monitor.py  x_utils.py  xerox_sniper_bot_data.pickle
data/: last_sniped_mention.txt
wallets/6858772436/: wallet_0.json  wallet_1.json
wallets/7083789426/: wallet_0.json  wallet_1.json
